--- a/components/comp.css
+++ b/components/comp.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	box-shadow: 0.3rem grey;
 }
 
 .logo {
@@ -38,12 +39,9 @@
 /* for restaurant card */
 .restaurant-card {
 	width: 10rem;
-	/* height: 12rem; */
-	border: 0.1rem solid grey;
+	border: 0.1rem solid lightgrey;
 	margin: 1rem;
 	padding: 0.3rem;
-	/* display: flex;
-	flex-direction: column; */
 }
 
 .food-image {
@@ -59,6 +57,26 @@
 	width: 4rem;
 	height: 1.2rem;
 	margin: 0.8rem;
+}
+
+/* offers page */
+.offer-banner {
+	/* margin: 1rem; */
+	width: 100%;
+	height: 13rem;
+	background-color: #005062;
+	color: whitesmoke;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.offer-banner-content {
+	margin: 1rem;
+}
+
+.offer-banner > img {
+	margin: 1rem;
 }
 
 .footer {
