--- a/components/comp.css
+++ b/components/comp.css
@@ -59,7 +59,7 @@
 	margin: 0.8rem;
 }
 
-/* offers page */
+/* for offers page */
 .offer-banner {
 	/* margin: 1rem; */
 	width: 100%;
@@ -77,6 +77,27 @@
 
 .offer-banner > img {
 	margin: 1rem;
+}
+
+/* for error page */
+
+.error-page {
+	width: 100%;
+	/* height: 13rem; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 1rem;
+}
+
+.error-page > img {
+	width: 30%;
+	height: 15rem;
+}
+
+.error-page > h3 {
+	color: red;
 }
 
 .footer {
