--- a/components/comp.css
+++ b/components/comp.css
@@ -1,6 +1,6 @@
 .header-container {
 	/* margin: 1rem; */
-	border: 0.3rem solid grey;
+	/* border: 0.3rem solid grey; */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -68,13 +68,14 @@
 .search-item {
 	text-align: center;
 	margin: 2rem;
+	height: 100vh;
 }
 
 .search-box {
 	width: 60%;
 	height: 2.5rem;
-	border-radius: 0.2rem;
-	border-color: lightgray;
+	/* border-radius: 0.1rem; */
+	/* border-color: lightgray; */
 }
 
 .search-button {
@@ -83,6 +84,22 @@
 	margin-left: 0.4rem;
 	border-radius: 0.2rem;
 	border-color: lightgray;
+	background-color: rgb(255, 132, 0);
+	border-style: none;
+	color: whitesmoke;
+}
+
+.search-suggestions {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2rem;
+}
+
+.search-sugestion-imgs {
+	width: 4rem;
+	height: 6rem;
+	margin-inline: 0.5rem;
 }
 
 /* for offers page */
@@ -90,7 +107,7 @@
 	/* margin: 1rem; */
 	width: 100%;
 	height: 13rem;
-	background-color: #005062;
+	background-color: #025b6f;
 	color: whitesmoke;
 	display: flex;
 	flex-direction: row;
@@ -103,6 +120,16 @@
 
 .offer-banner > img {
 	margin: 1rem;
+}
+
+/* for help page */
+
+.help-page {
+	width: 100%;
+	height: 100vh;
+	background-color: #025b6f;
+	color: whitesmoke;
+	padding: 2rem;
 }
 
 /* for error page */
@@ -126,7 +153,57 @@
 	color: red;
 }
 
+/* for footer component */
+
 .footer {
-	margin: 1rem;
-	background-color: white;
+	padding-top: 0.5rem;
+	background-color: rgb(255, 132, 0);
+	color: whitesmoke;
+	display: flex;
+	flex-direction: column;
+	/* padding-left: 1rem; */
+	/* margin: 0; */
+}
+
+.footer-list {
+	margin: 0;
+	/* padding-inline: 3rem; */
+}
+
+.footer-list > ul {
+	display: flex;
+	justify-content: space-between;
+	/* align-items: center; */
+	padding-inline: 4rem;
+}
+
+.footer-list > ul > li {
+	list-style: none;
+	/* margin-inline: 2rem; */
+}
+
+.footer-list > ul > li > span {
+	font-size: 1rem;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+	text-transform: uppercase;
+	text-decoration: underline;
+}
+
+.span-list {
+	display: flex;
+	flex-direction: column;
+	margin-top: 1rem;
+	padding: 0;
+}
+
+.span-list > li {
+	list-style: none;
+	font-family: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
+	font-weight: normal;
+	font-variant: normal;
+	padding-block: 0.5rem;
+}
+
+.footer > p {
+	padding-left: 1rem;
 }
